# Quotient-Manifold

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
configs/: anymal_qdm_b.yaml  qm9_qdm_b.yaml
experiments/molecular/: train_conformer.py
experiments/robot/: train_locomotion.py
qdm/: __init__.py
qdm/diffusion/: __init__.py  score_matching.py  sde.py
qdm/geometry/: __init__.py  bundle_utils.py  horizontal_projection.py  lie_groups.py  quotient_manifold.py
qdm/models/: __init__.py  qdm_model.py  robot_encoder.py  score_net.py
qdm/training/: __init__.py  trainer.py
qdm/utils/: __init__.py  metrics.py
scripts/: demo.py
tests/: test_qdm.py
